--- a/index.html
+++ b/index.html
@@ -238,7 +238,7 @@
     .timeline-item::before {
       content: '';
       position: absolute;
-      left: var(--timeline-x);     /* 跟線同一個 X */
+      left: 70px;     /* 跟線同一個 X */
       top: 6px;                    /* 垂直微調 */
       width: 6px;
       height: 6px;
