--- a/index.html
+++ b/index.html
@@ -353,42 +353,79 @@
     }
 
     /* Intro 照片滑動區：10 張照片＋註解 */
+       /* Intro 照片滑動區：10 張照片＋註解＋微浮出效果 */
     .intro-slider {
       width: 100%;
       max-width: 380px;
       display: flex;
       gap: 14px;
       overflow-x: auto;
-      scroll-snap-type: x mandatory;
+      scroll-snap-type: x proximity; /* 比 mandatory 更順滑 */
       padding-bottom: 6px;
       margin-bottom: 8px;
       -ms-overflow-style: none;
       scrollbar-width: none;
+      scroll-padding: 0 10%; /* 讓兩側不會貼邊 */
     }
 
     .intro-slider::-webkit-scrollbar {
       display: none;
     }
 
+    /* 每一張照片外層卡片 */
     .intro-slide {
       flex: 0 0 78%;
       scroll-snap-align: center;
       text-align: center;
+      transform: scale(0.96);
+      transition: transform 0.4s ease, box-shadow 0.4s ease;
     }
 
+    /* 滑動時：非主圖略縮小，滑到的那張浮出來 */
+    .intro-slider:active .intro-slide,
+    .intro-slider:hover .intro-slide {
+      transform: scale(0.94);
+    }
+
+    .intro-slider:active .intro-slide:active,
+    .intro-slider:hover .intro-slide:hover {
+      transform: scale(1.03);
+      box-shadow: 0 14px 30px rgba(0, 0, 0, 0.18);
+    }
+
+    /* 圖片尺寸統一 */
     .intro-slide img {
       width: 100%;
-      height: auto;
+      height: 280px; /* 統一高度，可自行改 260 / 300 */
       border-radius: 18px;
       object-fit: cover;
       border: 4px solid #fff;
-      box-shadow: 0 12px 30px rgba(0, 0, 0, 0.15);
-      transition: transform 0.5s ease;
+      box-shadow: 0 12px 26px rgba(0, 0, 0, 0.14);
+      transition: transform 0.4s ease, box-shadow 0.4s ease;
     }
 
-    .intro-slide img:hover {
-      transform: scale(1.05);
+    /* 手機上點按也有一點浮出感（沒有滑鼠 hover） */
+    .intro-slide:active img {
+      transform: scale(1.03);
+      box-shadow: 0 14px 30px rgba(0, 0, 0, 0.2);
     }
+
+    .intro-caption {
+      margin-top: 6px;
+      font-size: 12px;
+      color: var(--text-muted);
+      line-height: 1.4;
+    }
+
+    @media (min-width: 768px) {
+      .intro-slide {
+        flex: 0 0 60%;
+      }
+      .intro-slide img {
+        height: 320px;
+      }
+    }
+
 
     .intro-caption {
       margin-top: 6px;
@@ -482,8 +519,7 @@
         請先欣賞一下本人的帥度，再進入行程。
       </div>
     </div>
-
-       <div class="intro-slider">
+    <div class="intro-slider">
       <div class="intro-slide">
         <img src="axe-photo1.jpg" alt="AXE Photo 1" />
         <div class="intro-caption">這趟大阪生日旅行的主角，請多多指教。</div>
@@ -491,48 +527,51 @@
 
       <div class="intro-slide">
         <img src="axe-photo2.jpg" alt="AXE Photo 2" />
-        <div class="intro-caption">準備出發去大阪的男人，帥度已經超標。</div>
+        <div class="intro-caption">身高181CM 體重可能90KG。</div>
       </div>
 
       <div class="intro-slide">
         <img src="axe-photo3.jpg" alt="AXE Photo 3" />
-        <div class="intro-caption">帥到必須做一個專屬網站記錄這趟旅程。</div>
+        <div class="intro-caption">胸肌可能有90D。</div>
       </div>
 
       <div class="intro-slide">
         <img src="axe-photo4.jpg" alt="AXE Photo 4" />
-        <div class="intro-caption">笑起來的樣子，是我決定辦生日旅行的原因之一。</div>
+        <div class="intro-caption">其實也蠻會唱歌的。</div>
       </div>
 
       <div class="intro-slide">
         <img src="axe-photo5.jpg" alt="AXE Photo 5" />
-        <div class="intro-caption">精心研究的 OOTD，每一件都想拍滿記憶卡。</div>
+        <div class="intro-caption">也有曾經長得很清秀的時候。</div>
       </div>
 
       <div class="intro-slide">
         <img src="axe-photo6.jpg" alt="AXE Photo 6" />
-        <div class="intro-caption">這張是我的私藏心臟爆擊照，終於有機會拿出來用。</div>
+        <div class="intro-caption">然後是一個不愛喝水 只喝飲料的男人。</div>
       </div>
 
       <div class="intro-slide">
         <img src="axe-photo7.jpg" alt="AXE Photo 7" />
-        <div class="intro-caption">覺得自己很帥沒錯，就是要這種自信才適合去環球影城。</div>
+        <div class="intro-caption">不知道為什麼這張感覺很像在抽菸????。</div>
       </div>
 
       <div class="intro-slide">
         <img src="axe-photo8.jpg" alt="AXE Photo 8" />
-        <div class="intro-caption">大阪街頭最亮的那一個，請準備好被路人多看兩眼。</div>
+        <div class="intro-caption">好希望可以再拍一次裸體寫真。</div>
       </div>
 
       <div class="intro-slide">
         <img src="axe-photo9.jpg" alt="AXE Photo 9" />
-        <div class="intro-caption">摔角場外的溫柔一面，也要被好好收藏起來。</div>
+        <div class="intro-caption">到底為什麼衣服都扣不起來???。</div>
       </div>
 
       <div class="intro-slide">
         <img src="axe-photo10.jpg" alt="AXE Photo 10" />
-        <div class="intro-caption">生日快樂，這次換我幫你安排舞台和每一個驚喜。</div>
+        <div class="intro-caption">生日快樂，AXE WANG/帕舒鹿假面，還有我最愛的王宏逸。</div>
       </div>
+    </div>
+
+
     </div>
 
 
