--- a/index.html
+++ b/index.html
@@ -518,7 +518,9 @@
         給台灣摔角顏值巔峰 Axe Wang 的專屬生日網站。<br />
         請先欣賞一下本人的帥度，再進入行程。
       </div>
-    </div>
+  <div class="intro">
+
+    <!-- 照片滑動區 -->
     <div class="intro-slider">
       <div class="intro-slide">
         <img src="axe-photo1.jpg" alt="AXE Photo 1" />
@@ -527,7 +529,7 @@
 
       <div class="intro-slide">
         <img src="axe-photo2.jpg" alt="AXE Photo 2" />
-        <div class="intro-caption">身高181CM 體重可能90KG。</div>
+        <div class="intro-caption">身高181cm，體重可能90kg。</div>
       </div>
 
       <div class="intro-slide">
@@ -547,12 +549,12 @@
 
       <div class="intro-slide">
         <img src="axe-photo6.jpg" alt="AXE Photo 6" />
-        <div class="intro-caption">然後是一個不愛喝水 只喝飲料的男人。</div>
+        <div class="intro-caption">然後是不愛喝水，只喝飲料的男人。</div>
       </div>
 
       <div class="intro-slide">
         <img src="axe-photo7.jpg" alt="AXE Photo 7" />
-        <div class="intro-caption">不知道為什麼這張感覺很像在抽菸????。</div>
+        <div class="intro-caption">不知道為什麼這張感覺很像在抽菸???</div>
       </div>
 
       <div class="intro-slide">
@@ -562,23 +564,23 @@
 
       <div class="intro-slide">
         <img src="axe-photo9.jpg" alt="AXE Photo 9" />
-        <div class="intro-caption">到底為什麼衣服都扣不起來???。</div>
+        <div class="intro-caption">到底為什麼衣服都扣不起來???</div>
       </div>
 
       <div class="intro-slide">
         <img src="axe-photo10.jpg" alt="AXE Photo 10" />
-        <div class="intro-caption">生日快樂，AXE WANG/帕舒鹿假面，還有我最愛的王宏逸。</div>
+        <div class="intro-caption">生日快樂，AXE WANG／帕舒鹿假面，還有我最愛的王宏逸。</div>
       </div>
     </div>
 
-
-    </div>
-
-
+    <!-- 小提示 -->
     <div class="intro-tip">送你帥照。</div>
 
+    <!-- 進入行程按鈕 -->
     <button class="intro-btn" id="enterTrip">一緒に旅行へ行きましょう</button>
+
   </div>
+
 
   <audio id="bgm" src="bgm.mp3" loop></audio>
 
