--- a/index.html
+++ b/index.html
@@ -458,6 +458,7 @@
       height: 320px; /* 固定高度，優化佈局 */
       border-radius: 20px;
       object-fit: cover;
+      object-position: 50% 30%;
       border: 6px solid #fff;
       box-shadow: 0 16px 40px rgba(0, 0, 0, 0.2); /* 更深的陰影 */
       transition: transform 0.4s ease, box-shadow 0.4s ease;
